<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    android:weightSum="1" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.52"
        android:orientation="vertical" >
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.12"
    	android:gravity="center_horizontal"
        android:text="@string/TextViewMainMessage"
        android:textColor="#000033"
        android:textSize="16sp" 
        android:typeface="serif"  >
    </TextView>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.12"
        android:orientation="vertical" >

        <Button
            android:id="@+id/ButtonMainEuclide"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ButtonMainEuclide" />

        <Button
            android:id="@+id/ButtonMainDES"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ButtonMainDES" />

        <Button
            android:id="@+id/ButtonMainRSA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ButtonMainRSA" />

        <Button
            android:id="@+id/ButtonMainKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ButtonMainKey" />
    </LinearLayout>

</LinearLayout>