<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:weightSum="1" android:background="@drawable/fondo">
    <LinearLayout android:id="@+id/linearLayout1" 
    	android:layout_height="wrap_content" 
    	android:layout_width="match_parent" 
    	android:orientation="vertical"
    	android:layout_weight="0.15" >
        <TextView android:textAppearance="?android:attr/textAppearanceLarge" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content" 
        	android:id="@+id/textView1" 
        	android:text="@string/OutputExplains">
        </TextView>
    </LinearLayout>
    <Button android:layout_height="wrap_content" 
    	android:layout_width="match_parent" 
    	android:id="@+id/OutputSelectionbuttonOutputText"  
    	android:layout_weight="0.10"
    	android:text="@string/OutputText">
    </Button>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.29"
        android:orientation="vertical" >

    </LinearLayout>
    <Button android:layout_width="match_parent" 
    	android:layout_height="wrap_content"  
    	android:layout_weight="0.10"
    	android:id="@+id/OutputSelectionbuttonOutputFile" 
    	android:text="@string/OutputFile">
    </Button>
    
</LinearLayout>
